# DarknetDiaries_Scraper

./: pyproject.toml  requirements.txt
source/: conf.py  index.rst
src/: __init__.py  downloadtool.py  ep_disp.py  main.py  my_utils_two.py  podcast_class_factory.py  working_dn_scraper.py
src/mypkg/: dn_page.xml
